# Compilation-Tehniques

./: .gitignore  CMakeLists.txt  LICENSE  README.md  diff_build.sh  memory_check.sh  run.sh  sources.cmake
include/: LexicalAnalyzer.hpp  Logger.hpp  Node.hpp  SyntacticAnalyzer-Dragos’s MacBook Pro.hpp  SyntacticAnalyzer.hpp  Token.hpp  TokenList.hpp  Utils.hpp  VariadicTable.hpp
include/symbolTable/: ReturnValue.hpp  Symbol.hpp  SymbolTable.hpp  Type.hpp
include/virtualMachine/: Instruction.hpp  InstructionList.hpp  VirtualMachine.hpp
src/: LexicalAnalyzer.cpp  Logger.cpp  Node.cpp  SyntacticAnalyzer.cpp  Token.cpp  TokenList.cpp  Utils.cpp  main.cpp
src/symbolTable/: ReturnValue.cpp  Symbol.cpp  SymbolTable.cpp  Type.cpp
src/virtualMachine/: Instruction.cpp  InstructionList.cpp  VirtualMachine.cpp
testing_files/: 1.c  ID.txt  block_comment.txt  ct_int.txt  ct_string.txt  delimiters.txt  file1.txt  input.txt  main.c  operators.txt  test.txt
testing_files/dfa/: ID.txt  block_comment.txt  ct_char.txt  ct_int.txt  ct_real.txt  delimiters+operators.txt  line_comment.txt
testing_files/tests/: 0.c  4.c  6.c  7.c  9.c
